--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,9 +79,7 @@ stages:
 
 build-test:
   stage: build-test
-  script:
-    - gradle build test -x itest -x jacocoTestCoverageVerification
-    - gradle buildArtifacts
+  script: gradle build test -x itest -x jacocoTestCoverageVerification
 
 nfs-itest:
   needs: [ "build-test" ]
