--- a/ci/exporter.yml
+++ b/ci/exporter.yml
@@ -1,7 +1,7 @@
 .deploy-prod-exporter-task:
   dependencies:
     - build-test
-  script: gradle :scheduler:tasks:exporter-task:bootJar updateExporterArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/prod/apps
+  script: gradle updateExporterArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/prod/apps
 
 auto-deploy-prod-exporter-task:
   extends: .deploy-prod-exporter-task
@@ -15,14 +15,14 @@ deploy-dev-exporter-task:
   when: manual
   dependencies:
     - build-test
-  script: gradle :scheduler:tasks:exporter-task:bootJar updateExporterArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
+  script: gradle updateExporterArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
 
 deploy-beta-exporter-task:
   stage: deploy-beta-exporter-task
   when: manual
   dependencies:
     - build-test
-  script: gradle :scheduler:tasks:exporter-task:bootJar updateExporterArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/beta/apps
+  script: gradle updateExporterArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/beta/apps
 
 deploy-prod-exporter-task:
   extends: .deploy-prod-exporter-task
