Pivotal ID # 187611460: Fix Artifacts Deployment (#838)
https://www.pivotaltracker.com/story/show/187611460

Generate the corresponding artifact during the deployment stage
execution

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,7 +79,7 @@ stages:
 
 build-test:
   stage: build-test
-  script: gradle build test -x itest -x jacocoTestCoverageVerification buildArtifacts
+  script: gradle build test -x itest -x jacocoTestCoverageVerification
 
 nfs-itest:
   needs: [ "build-test" ]
