--- a/ci/jobs.yml
+++ b/ci/jobs.yml
@@ -1,4 +1,5 @@
 auto-deploy-dev:
+  stage: auto-deploy-dev
   dependencies:
     - build-test
   only:
@@ -17,6 +18,7 @@ auto-deploy-dev:
     - gradle deploySubmitter -Penv=dev -PdeployPath=$APPS_PATH/submitter/dev
 
 auto-deploy-beta:
+  stage: auto-deploy-beta
   dependencies:
     - build-test
   only:
@@ -35,6 +37,7 @@ auto-deploy-beta:
     - gradle deploySubmitter -Penv=beta -PdeployPath=$APPS_PATH/submitter/beta -PjvmParams=-Xmx12g
 
 auto-deploy-prod:
+  stage: auto-deploy-prod
   dependencies:
     - build-test
   only:
