Pivotal ID # 187484499: Make Files Private On Resubmission
- Update the un-publish fire operation to return the un-published file
- Make files private when a submission becomes private

--- a/ci/jobs.yml
+++ b/ci/jobs.yml
@@ -79,6 +79,7 @@ deploy-prod:
     - gradle updateMigratorArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/prod/apps
     - gradle updateReleaserArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/prod/apps
     - gradle updateSubmissionTaskArtifact -Penv=prod -PdeployPath=$APPS_PATH/submitter/prod
+    - gradle updateSubmissionTaskArtifact -Penv=prod -PdeployPath=$APPS_PATH/submitter/migrator
     - gradle updateSubmissionTaskArtifact -Penv=sandbox -PdeployPath=$APPS_PATH/submitter/sandbox
     - gradle deployMigratorSubmitter -Penv=prod -PdeployPath=$APPS_PATH/submitter/migrator -PjvmParams=-Xmx8g
     - gradle deploySubmitter -Penv=prod -PdeployPath=$APPS_PATH/submitter/prod -PjvmParams=-Xmx16g
