--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -71,9 +71,11 @@ app:
     configFilePath: # the submitter task application.yml file location.
   cluster:
     enabled: # Whether the cluster jobs should be triggered remotely
+    default: # Default cluster mode. Valid values: LSF | SLURM
     user: # cluster user
     key: # cluster ssh key path.
-    server:  # cluster sever (to submit jobs from)
+    lsfServer:  # LSF cluster sever
+    slurmServer:  # SLURM cluster sever
     logsPath: # path to place the logs of the dispatched jobs
   fire:
     host: # FIRE host
