code review changes

--- a/submission/submission-webapp/src/itest/resources/application_base.yml
+++ b/submission/submission-webapp/src/itest/resources/application_base.yml
@@ -51,6 +51,7 @@ app:
     tokenHash: biostd-test
     environment: TEST
     requireActivation: false
+    preventFileDelition: true
     filesProperties:
       defaultMode: NFS
       filesDirPath:
