Pivotal ID # 187642945: Partition Cluster Jobs Logs Path
- Create a wrapper to execute commands in the cluster
- Use the job id to provide the dynamic output path
- Add a new property to specify the wrapper script location

--- a/deploy.gradle
+++ b/deploy.gradle
@@ -171,6 +171,17 @@ task deployArtifact {
     }
 }
 
+task updateClusterWrapper {
+    doLast {
+        ssh.run {
+            session(remotes[env]) {
+                put from: "$rootDir/ci/slurm_wrapper.sh", into: "$clusterWrapperPath/slurm_wrapper.sh"
+                execute "chmod +x $clusterWrapperPath/slurm_wrapper.sh"
+            }
+        }
+    }
+}
+
 task deploy {
     doLast {
         ssh.run {
