--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -79,6 +79,7 @@ app:
     lsfServer:  # LSF cluster sever
     slurmServer:  # SLURM cluster sever
     logsPath: # path to place the logs of the dispatched jobs
+    wrapperPath: # path to place the command wrapper script
   fire:
     host: # FIRE host
     username: # FIRE user
