Pivotal ID # 187642945: Partition Cluster Jobs Logs Path
Setup deployment

--- a/ci/jobs.yml
+++ b/ci/jobs.yml
@@ -22,6 +22,7 @@ deploy-dev:
     - gradle deployHandlers -Penv=dev -PdeployPath=$APPS_PATH/handlers/dev
     - gradle updateMigratorArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
     - gradle updateReleaserArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
+    - gradle updateClusterWrapper -Penv=codon -PdeployPath=$CODON_WRAPPER_PATH/dev
     - gradle updateSubmissionTaskArtifact -Penv=dev -PdeployPath=$APPS_PATH/submitter/dev
     - gradle deploySubmitter -Penv=dev -PdeployPath=$APPS_PATH/submitter/dev
 
@@ -49,6 +50,7 @@ deploy-beta:
     - gradle deployHandlers -Penv=beta -PdeployPath=$APPS_PATH/handlers/beta
     - gradle updateMigratorArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/beta/apps
     - gradle updateReleaserArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/beta/apps
+    - gradle updateClusterWrapper -Penv=codon -PdeployPath=$CODON_WRAPPER_PATH/beta
     - gradle updateSubmissionTaskArtifact -Penv=beta -PdeployPath=$APPS_PATH/submitter/beta
     - gradle deploySubmitter -Penv=beta -PdeployPath=$APPS_PATH/submitter/beta -PjvmParams=-Xmx12g
 
@@ -78,6 +80,7 @@ deploy-prod:
     - gradle deployHandlers -Penv=sandbox -PdeployPath=$APPS_PATH/handlers/sandbox
     - gradle updateMigratorArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/prod/apps
     - gradle updateReleaserArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/prod/apps
+    - gradle updateClusterWrapper -Penv=codon -PdeployPath=$CODON_WRAPPER_PATH/prod
     - gradle updateSubmissionTaskArtifact -Penv=prod -PdeployPath=$APPS_PATH/submitter/prod
     - gradle updateSubmissionTaskArtifact -Penv=prod -PdeployPath=$APPS_PATH/submitter/migrator
     - gradle updateSubmissionTaskArtifact -Penv=sandbox -PdeployPath=$APPS_PATH/submitter/sandbox
