--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -71,6 +71,7 @@ app:
     configFilePath: # the submitter task application.yml file location.
     taskMemoryMgb: # Amount of memory (in MB) to be allocated for the submission processing tasks
     taskCores: # Number of cores to be allocated for the submission processing tasks
+    taskMinutes: # Maximum number of minutes to execute the submission processing tasks
   cluster:
     enabled: # Whether the cluster jobs should be triggered remotely
     default: # Default cluster mode. Valid values: LSF | SLURM
@@ -135,6 +136,7 @@ app:
   notifications:
     requestQueue: # Queue used to handle request stages
     requestRoutingKey: # Submission request messages routing key
+    errorNotificationsEnabled: # Boolean flag to enable/disable the Slack error notifications
   doi:
     endpoint: # DOI registration endpoint
     uiUrl: # The BioStudies UI URL which will be associated to the DOI record
