--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -68,6 +68,7 @@ app:
     enabled: # Whether the submission tasks should be executed in the cluster
     jarLocation: # the submitter task jar location.
     javaLocation: # The path to the java installation
+    singleJobMode: # Whether to execute all submission in a single cluster job
     configFilePath: # the submitter task application.yml file location.
     taskMemoryMgb: # Amount of memory (in MB) to be allocated for the submission processing tasks
     taskCores: # Number of cores to be allocated for the submission processing tasks
