Pivotal ID # 188526717: Improve Drafts Timeline Structure
- Add modification date to the drafts
- Use readable timestamp as the draft key
- Use reactive web client for the draft operations
- Remove unused code

--- a/docs/api/drafts/model/BasicDraft.yaml
+++ b/docs/api/drafts/model/BasicDraft.yaml
@@ -3,7 +3,7 @@ schema:
   properties:
     key:
       type: string
-      example: "TMP_123456"
+      example: "TMP_2024-09-21T10:12:00.002Z"
     content:
       type: string
       example: "{ 'type': 'Submission', 'section': { 'type': 'Study' } }"
