code review changes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,4 @@
 image: gradle:8.7-jdk17
-run:
-  script:
-  - apt-get update && apt-get install -y rsync
-
 services:
   - docker:dind
 variables:
@@ -15,6 +11,7 @@ include:
   - local: '/ci/jobs.yml'
 
 stages:
+  - install-prerequisites
   - build-test
   - nfs-itest
   - fire-itest
@@ -28,7 +25,11 @@ stages:
   - build-fat-jar
   - build-push-docker-image
 
+install-prerequisites:
+  script: apt-get update && apt-get install -y rsync
+
 build-test:
+  needs: [ "install-prerequisites" ]
   stage: build-test
   script: gradle submission:submission-webapp:itest --tests ac.uk.ebi.biostd.itest.test.user.UserAdminApiTest
 
