--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,18 +31,24 @@ build-test:
 nfs-itest:
   needs: [ "build-test" ]
   stage: nfs-itest
-  script: gradle :submission:submission-webapp:itest -PenableFire=false --rerun-tasks
+  script:
+    - apt-get update && apt-get install -y rsync
+    - gradle :submission:submission-webapp:itest -PenableFire=false --rerun-tasks
 
 fire-itest:
   needs: [ "nfs-itest" ]
   stage: fire-itest
-  script: gradle :submission:submission-webapp:itest -PenableFire=true --rerun-tasks
+  script:
+    - apt-get update && apt-get install -y rsync
+    - gradle :submission:submission-webapp:itest -PenableFire=true --rerun-tasks
   variables:
     ITEST_FIXED_DELAY: "50"
 
 fire-caos-itest:
   needs: [ "fire-itest" ]
   stage: fire-caos-itest
-  script: gradle :submission:submission-webapp:itest -PenableFire=true --rerun-tasks
+  script:
+    - apt-get update && apt-get install -y rsync
+    - gradle :submission:submission-webapp:itest -PenableFire=true --rerun-tasks
   variables:
     ITEST_FAIL_FACTOR: "8"
