Pivotal ID # 184033688: Async Validation Process
- Move up concurrent requests validation
- Change key to accNo

--- a/docs/api/drafts/model/BasicDraft.yaml
+++ b/docs/api/drafts/model/BasicDraft.yaml
@@ -1,7 +1,7 @@
 schema:
   type: object
   properties:
-    key:
+    accNo:
       type: string
       example: "TMP_2024-09-21T10:12:00.002Z"
     content:
