--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -123,6 +123,11 @@ app:
         ftpPort: # FTP port
         defaultTimeout: # FTP connection pool default timeout
         connectionTimeout: # FTP connection pool connection timeout
+        retry:
+          maxAttempts: # Maximum retry attempts
+          initialInterval: # Initial waiting interval time in ms
+          multiplier: # Multiplier for the waiting interval
+          maxInterval: # Maximum interval duration
   persistence:
     enableFire: # Boolean flag to indicate whether the files are stored on FIRE if true or NFS if false
     concurrency: # Number of files processed concurrently
