Pivotal # 188837373: Move Applications To Production NFS
Test build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ stages:
 
 build-test:
   stage: build-test
-  script: gradle build # test -x itest -x jacocoTestCoverageVerification
+  script: gradle build -x test -x itest -x jacocoTestCoverageVerification
 
 #nfs-itest:
 #  needs: [ "build-test" ]
