--- a/ci/jobs.yml
+++ b/ci/jobs.yml
@@ -14,15 +14,15 @@ deploy-dev:
   dependencies:
     - build-test
   script:
-#    - gradle deployBioCommandLine -Penv=dev -PdeployPath=$FTP_OUT_APPS_PATH/cli/dev
-#    - gradle updateExporterArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
-#    - gradle updatePmcArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
-#    - gradle deployScheduler -Penv=dev -PdeployPath=$FTP_OUT_APPS_PATH/scheduler/dev
-#    - gradle updateStatsReporterArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
-#    - gradle deployHandlers -Penv=dev -PdeployPath=$FTP_OUT_APPS_PATH/handlers/dev
-#    - gradle updateMigratorArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
-#    - gradle updateReleaserArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
-#    - gradle updateClusterWrapper -Penv=codon -PdeployPath=$CODON_WRAPPER_PATH/dev
+    - gradle deployBioCommandLine -Penv=dev -PdeployPath=$FTP_OUT_APPS_PATH/cli/dev
+    - gradle updateExporterArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
+    - gradle updatePmcArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
+    - gradle deployScheduler -Penv=dev -PdeployPath=$FTP_OUT_APPS_PATH/scheduler/dev
+    - gradle updateStatsReporterArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
+    - gradle deployHandlers -Penv=dev -PdeployPath=$FTP_OUT_APPS_PATH/handlers/dev
+    - gradle updateMigratorArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
+    - gradle updateReleaserArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
+    - gradle updateClusterWrapper -Penv=codon -PdeployPath=$CODON_WRAPPER_PATH/dev
     - gradle updateSubmissionTaskArtifact -Penv=dev -PdeployPath=$FTP_OUT_APPS_PATH/submitter/dev
     - gradle deploySubmitter -Penv=dev -PdeployPath=$FTP_OUT_APPS_PATH/submitter/dev
 
