--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -58,6 +58,7 @@ logging:
 app:
   processId: # Id to register the submission task
   retrySubmission: # Boolean flag to enable/disable automatic retrying of staled submissions
+  asyncMode: false #
   checkFilesPath: true # Boolean flag to enable/disable files path allowed character check.
   enablePropertiesLog: # Boolean flag to enable/disable displaying the application properties on start
   consumers: # Number of processing queue consumers.
