--- a/submission/submission-webapp/src/itest/resources/application_base.yml
+++ b/submission/submission-webapp/src/itest/resources/application_base.yml
@@ -29,6 +29,7 @@ spring:
 app:
   processId: Biostudies-Itest
   checkFilesPath: true
+  asyncMode: false
   retrySubmission: false
   submissionPath:
   ftpPath:
