--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -114,7 +114,8 @@ app:
       defaultMode: # The default mode to create user folder. Valid values are: NFS, FTP
       filesDirPath: # Absolute path to the folder to be used for the user/groups files
       magicDirPath: # Absolute path to create user magic folder for dropbox simple access
-      subFtp:
+      userFtpDirPath: # Absoluate path of folder where FTP in is mounted on NFS.
+      ftpOut:
         ftpDirPath: # Absolute path of the FTP-OUT folder in NFS
         ftpRootPath: # Root path to find the user files in the FTP-OUT folder. If blank, root level FTP-IN will be used
         ftpUser: # FTP user
@@ -129,7 +130,7 @@ app:
           multiplier: # Multiplier for the waiting interval
           maxInterval: # Maximum interval duration
 
-      ftp:
+      ftpIn:
         ftpDirPath: # Absolute path of the FTP-IN folder in NFS
         ftpRootPath: # Root path to find the user files in the FTP-IN folder. If blank, root level FTP-IN will be used
         ftpUser: # FTP user
@@ -150,10 +151,10 @@ app:
     nfsReleaseMode: # Method used to release files for NFS submissions. Valid values are: MOVE, HARD_LINKS
 
     privateSubmissionsPath: # Absolute path to the folder to be used as storage for private submissions
-    privateSubmissionFtpPath: # Relative ftp path to the folder to be used as storage for private submissions
+    privateSubmissionFtpOutPath: # Relative ftp path to the folder to be used as storage for private submissions
 
     publicSubmissionsPath: # Absolute path to the folder to be used as storage for public submissions
-    publicSubmissionFtpPath: # Relative ftp path to the folder to be used as storage for public submissions
+    publicSubmissionFtpOutPath: # Relative ftp path to the folder to be used as storage for public submissions
 
     requestFilesPath: # Absolute path to the folder where request files are stored
     tempDirPath: # Absolute path to the folder used to generate temporary files
